--- a/src/index.html
+++ b/src/index.html
@@ -33,22 +33,22 @@
                             </a>
                         </li>
                         <li class="nav__item" >
-                            <a    href="./about.html" class="nav__link " data-link id="about">
+                            <a    href="./pages/about.html" class="nav__link " data-link id="about">
                                 about
                             </a>
                         </li>
                         <li class="nav__item">
-                            <a   href="./services.html" class="nav__link" data-link id="services">
+                            <a   href="./pages/services.html" class="nav__link" data-link id="services">
                             services
                             </a>
                         </li>
                         <li class="nav__item ">
-                            <a href="./blog.html" class="nav__link" >
+                            <a href="./pages/blog.html" class="nav__link" >
                                 blog
                             </a>
                         </li>
                         <li class="nav__item " data-contact id="contact">
-                            <a  href="./contact.html" class="nav__link">
+                            <a  href="./pages/contact.html" class="nav__link">
                                 contact us
                             </a>
                         </li>
@@ -537,13 +537,13 @@
                         <a href="./index.html" class="footer__link footer__link--selected">home</a>
                     </li>
                     <li class="footer__item">
-                        <a href="./about.html" class="footer__link">about us</a>
+                        <a href="./pages/about.html" class="footer__link">about us</a>
                     </li>
                     <li class="footer__item">
-                        <a href="./blog.html" class="footer__link">blog</a>
+                        <a href="./pages/blog.html" class="footer__link">blog</a>
                     </li>
                     <li class="footer__item">
-                        <a href="./contact.html" class="footer__link">contact</a>
+                        <a href="./pages/contact.html" class="footer__link">contact</a>
                     </li>
                 </ul>
                 <ul class="social-links">
