updating core-js package and refactored some js code

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -226,12 +226,8 @@
                         <div class="box">
                             <figure class="team-member hide" data-anime="fadeInLeft .8s ease-in-out forwards">
                                 <img 
-                                sizes="
-                                280px,
-                                (min-width: 576px) 330px,
-                                (min-width: 768px) 250px"
-                                srcset="../img/person-1-1x.jpg 350w,
-                                        ../img/person-1-2x.jpg 700w"
+                                sizes="280px, (min-width: 576px) 330px, (min-width: 768px) 250px"
+                                srcset="../img/person-1-1x.jpg 350w, ../img/person-1-2x.jpg 700w"
                                 src="../img/person-1-2x.jpg"
                                  alt="team-member" 
                                  class="team-member__img">
@@ -272,12 +268,8 @@
 
                             <figure class="team-member hide" data-anime="fadeIn .8s ease-in-out forwards">
                                 <img 
-                                sizes="
-                                280px,
-                                (min-width: 576px) 330px,
-                                (min-width: 768px) 250px"
-                                srcset="../img/person-2-1x.jpg 350w,
-                                        ../img/person-2-2x.jpg 700w"
+                                sizes="280px, (min-width: 576px) 330px, (min-width: 768px) 250px"
+                                srcset="../img/person-2-1x.jpg 350w, ../img/person-2-2x.jpg 700w"
                                 src="../img/person-2-2x.jpg"
                                  alt="team-member" 
                                  class="team-member__img">
@@ -319,13 +311,8 @@
                             <figure class="team-member hide" data-anime="fadeInRight .8s ease-in-out forwards">
                                 <img 
                                 
-                                srcset="../img/person-3-1x.jpg 350w,
-                                        ../img/person-3-2x.jpg 700w"
-                                sizes="
-                                280px,
-                                (min-width: 576px) 330px,
-                                (min-width: 768px) 250px
-                                "
+                                srcset="../img/person-3-1x.jpg 350w, ../img/person-3-2x.jpg 700w"
+                                sizes="280px, (min-width: 576px) 330px, (min-width: 768px) 250px"
                                 src="../img/person-3-2x.jpg"
                                  alt="team-member" 
                                  class="team-member__img"
