adjusting the copyright name in the footer

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -443,7 +443,7 @@
                         </a>
                     </li>
                 </ul>
-                <p class="footer__copy">all rights reserved &copy; 2020 developed by flare</p>
+                <p class="footer__copy">all rights reserved &copy; 2020 developed by Codeflare</p>
             </div>
             <!-- end container-->
         </footer>
