--- a/src/index.html
+++ b/src/index.html
@@ -571,7 +571,7 @@
                         </a>
                     </li>
                 </ul>
-                <p class="footer__copy">all rights reserved &copy; 2020 developed by flare</p>
+                <p class="footer__copy">all rights reserved &copy; 2020 developed by Codeflare</p>
             </div>
         </footer>
         <!-- end page footer-->
