added a name for the website

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -22,7 +22,7 @@
 
                     <div class="logo-container">
                         <a href="#" class="logo">
-                            logo
+                            Delta Security
                         </a>
                     </div>
                     <ul class="nav" data-nav>
@@ -402,7 +402,7 @@
         <footer class="footer" role="contentinfo">
             <div class="container">
                 <div class="logo-container">
-                    <a href="#" class="footer__logo">logo</a>
+                    <a href="#" class="footer__logo">Delta Security</a>
                 </div>
                 <ul class="footer__nav">
                     <li class="footer__item">
