--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>home</title>
+    <title>Delta Security landing page</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
                 <div class="container">
                     <div class="logo-container">
                         <a href="#" class="logo">
-                            logo
+                            Delta Security
                         </a>
                     </div>
                     <ul class="nav" data-nav>
@@ -530,7 +530,7 @@
         <footer class="footer" role="contentinfo">
             <div class="container">
                 <div class="logo-container">
-                    <a href="#" class="footer__logo">logo</a>
+                    <a href="#" class="footer__logo">Delta Security</a>
                 </div>
                 <ul class="footer__nav">
                     <li class="footer__item">
